Small fix for layout issues on buttons

--- a/src/report/report.css
+++ b/src/report/report.css
@@ -15,12 +15,12 @@
 
 .pie {
   flex-grow: 0;
-  width: 34%;
+  width: 100%;
 }
 
 .bar {
   flex-grow: 1;
-  width: 66%;
+  width: 100%;
 }
 
 .chart-container canvas {
@@ -57,6 +57,7 @@
   overflow-y: hidden;
   width: 100%;
   height: 5vh;
+  padding-bottom: 0px;
   box-sizing: border-box;
 }
 
@@ -76,8 +77,12 @@
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
   transition: 0.3s;
+  padding: 0 0.5rem;
+}
+
+.tab p {
+  margin: 0;
 }
 
 .tab button:hover {
@@ -93,6 +98,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .vscode-light .text {
